--- a/Pipfile
+++ b/Pipfile
@@ -11,13 +11,11 @@ line-bot-sdk = "*"
 gunicorn = "*"
 numpy = "*"
 pandas = "*"
-re = "*"
+regex = "*"
 requests = "*"
 bs4 = "*"
-pickle = "*"
-sklearn = "*"
+scikit-learn = "*"
 ckip-segmenter = "*"
-collections = "*"
 
 [requires]
 python_version = "3.8"
